# Ocean-CDR-Atlas-Calcs

./: .gitignore  README.md  application.py  cdr_atlas.py  download-oae-atlas.ipynb  environment.yml  parameters.yml  parsers.py  pyproject.toml  run.sh  update-blueprints.sh  util.py  utils.py  workflow.yml
atlas_engine/: __init__.py  application.py  datasets.py  ocean_cdr_atlas_v0.py  utils.py
blueprints/: .upstream-meta.json
executed/domain-sizing/: regional-domain-sizing_cson_roms-marbl_v0.1_ccs-12km.ipynb  regional-domain-sizing_cson_roms-marbl_v0.1_gulf-guinea-toy.ipynb  regional-domain-sizing_cson_roms-marbl_v0.1_hvalfjörður-0.ipynb  regional-domain-sizing_cson_roms-marbl_v0.1_test-tiny.ipynb  regional-domain-sizing_cson_roms-marbl_v0.1_wio-toy.ipynb
executed/ocean-cdr-atlas-datasets/: download-oae-atlas.ipynb
executed/skill-assessment/: skill-assessment-glodap.ipynb
notebooks/: download-oae-atlas.ipynb  regional-domain-sizing.ipynb  skill-assessment-glodap.ipynb
tests/: _grid.yml  test_application.py
